# vc_app

./: .gitignore  CMakeLists.txt  build.bat  build.sh  imgui.ini  setup_deps.bat  setup_deps.sh
include/Audio/: AudioEngine.hpp  JitterBuffer.hpp  LockFreeQueue.hpp  PeerMixer.hpp
include/Core/: Application.hpp  ChannelState.hpp  Utils.hpp
include/Database/: DatabaseManager.hpp
include/Network/: INetworkProvider.hpp  NetworkManager.hpp  TailscaleNetwork.hpp  TcpSession.hpp
include/UI/: WindowManager.hpp
include/Utils/: LoggerSetup.hpp
src/: Main.cpp
src/Audio/: AudioEngine.cpp  PeerMixer.cpp
src/Core/: Application.cpp  ChannelState.cpp
src/Database/: DatabaseManager.cpp
src/Network/: NetworkManager.cpp  TailscaleNetwork.cpp  TcpSession.cpp
src/UI/: WindowManager.cpp
src/Utils/: LoggerSetup.cpp
